--- a/WebApp/templates/page2.html
+++ b/WebApp/templates/page2.html
@@ -23,11 +23,21 @@
    </script>
 
 </head>
+<style>
+    body {
+      background-image: url("{{url_for('static',filename='images/PAGE2.jpg')}}");
+      background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+    }
+    </style>
+    
 <body>
     <div class content>
         <div class="ui grid container">
             <div class="sixteen wide column">
                 <div class="head_items">
+                    <br>
                     GIVE US A PICTURE
                 </div>
             </div>
